Fixes account info layout gaps

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -48,8 +48,6 @@ mat-sidenav-content {
 }
 
 .account-info {
-    padding-right: 8px;
-
     .balance-info {
         line-height: 100%;
     }
